# Goop-Demo

./: .coveragerc  .gitignore  .pylintrc  README.md  design.md  pyproject.toml
doc/: Design.md  Implementation.md  Requirement Specification.md  Testing.md  User Guide.md  Weekly Report #2.md  Weekly Report 1.md  Weekly Report 3.md  Weekly Report 4.md  Weekly Report 5.md  Weekly Report 6.md
src/: main.py
src/digital_geometry/: __init__.py  curve.py  digital_parabolic_map.py
src/exact_geometry/: __init__.py  curve_intersection.py
src/float_geometry/: __init__.py  curve_helpers.py  linear_curve.py  loop.py  loop_system.py  parabolic_curve.py
src/geometry/: __init__.py  curve.py  curve_helpers.py  linear_curve.py  loop.py  loop_system.py  parabolic_curve.py
src/tests/: curve_test.py  loop_test.py  parabolic_curve_test.py  vector2_test.py  vector_test.py
src/ui/: __init__.py  button.py  cell_view.py  curve_view.py  float_cell_view.py  float_curve_view.py  float_loop_view.py  loop_view.py  pixel_view.py  ui.py  window.py
src/util/: __init__.py  sort.py  vector.py  vector2.py
