[tool.poetry]
name = "goop-demo"
version = "0.1.0"
description = ""
authors = ["pants64DS <pants64DS@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goop_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
raylib = "^4.2.1.2"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
