[tool.poetry]
name = "goop-demo"
version = "0.1.0"
description = ""
authors = ["pants64DS <pants64DS@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goop_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
raylib = "^4.2.1.2"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
pylint = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
